test/spec_vectors/conversions/fail/module_8.wat
(module (func (result i64) (i64.extend_i32_u (f32.const 0))))